--- a/boot_menu.yml
+++ b/boot_menu.yml
@@ -1,5 +1,5 @@
 ublue_variants:
-  - label: ublue-os/startingpoint
+  - label: gunzy83/gunzy-os
     ks: /kickstart/ublue-os.ks
     flavors:
       - label: startingpoint
