Change codeowners and add dig

--- a/config/gunzy-os-kinoite.yml
+++ b/config/gunzy-os-kinoite.yml
@@ -29,6 +29,7 @@ modules:
       - applet-betterinlineclock
       - applet-window-appmenu
       - applet-window-title
+      - bind-utils
       - cherry-kde-theme
       - crudini
       - git
