--- a/config/gunzy-os-kinoite.yml
+++ b/config/gunzy-os-kinoite.yml
@@ -60,5 +60,5 @@ modules:
       - install-wavebox.sh
       - install-chezmoi.sh
       - setup-pam-u2f.sh
-      # this sets up the proper policy & signing files for signed images to work
-      - signing.sh
+
+  - type: signing # this sets up the proper policy & signing files for signed images to work fully
